--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>shopxxhrserver</module>
+        <module>mailserver</module>
     </modules>
 
 
