--- a/shopxxhrserver/shopxx-service/pom.xml
+++ b/shopxxhrserver/shopxx-service/pom.xml
@@ -13,6 +13,10 @@
     <version>1.0.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
             <version>4.0.1</version>
