--- a/shopxxhrserver/shopxxhr-web/src/main/resources/application.yml
+++ b/shopxxhrserver/shopxxhr-web/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 server:
   port: 8081
 spring:
+  rabbitmq:
+    username: guest
+    password: guest
+    host: 192.168.1.44
+    port: 5672
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     url: jdbc:mysql://127.0.0.1:3306/vhr?useUnicode=true&characterEncoding=UTF-8
@@ -43,13 +48,12 @@ spring:
     cache-names: menus_cache
     redis:
       time-to-live: 1800s
-
   jpa:
     properties:
       hibernate:
         enable_lazy_load_no_trans: true
     open-in-view: true
-    show-sql: true
+#    show-sql: true
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
       #      enable_lazy_load_no_trans: true
@@ -58,6 +62,6 @@ spring:
   #        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
-logging:
-  level:
-    org.hibernate: debug
+#logging:
+#  level:
+#    org.hibernate: debug
